# pipico-rust

./: .gitignore  ASYNC_LOG_IMPROVEMENTS.md  CHANGELOG.md  Cargo.toml  FINAL_CLEANUP.md  FINAL_TEST.md  IMPROVEMENTS_SUMMARY.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  QUICK_TEST.md  README.md  SOLUTION_SUMMARY.md  TEST_WINDOWS_CDC.md  TROUBLESHOOTING.md  USAGE.md  USB_README.md  WINDOWS_CDC_DEBUG.md  WINDOWS_CDC_FIX_V2.md  WINDOWS_DEBUG.md  WINDOWS_DRIVER_FIX.md  WINDOWS_FIX_SUMMARY.md  WINDOWS_TROUBLESHOOTING.md  build.rs  examples_log_usage.rs  memory.x  rp1-embassy.uf2  rust-toolchain.toml
.cargo/: config.toml
docs/: ARCHITECTURE.md  IMPROVEMENTS_SUMMARY.md  LOG_ASYNC_README.md  QUICK_START.md  README.md  USB_README.md  WINDOWS_DRIVER_FIX.md  WINDOWS_QUICK_FIX.md
scripts/: test_uart.sh
src/: banner.rs  config.rs  logger.rs  main.rs  main_simple_usb.rs.example
src/executor/: key.rs
src/tasks/: core0.rs  core1.rs  mod.rs
src/usb/: hid.rs  mod.rs  serial.rs  storage.rs
