[package]
name = "rp1-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.6.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.11", features = ["critical-section"] }
heapless = "0.8"

[profile.release]
debug = 2
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
debug = 2
lto = false
opt-level = "s"

